Add dependencies on Benchmark.js and microtime
Conflicts:
	package.json

Original commit: 747f7067b8867dca6d5464cd9a4cc0a9b1c6d6e9
Author: Kitson Kelly <dojo@kitsonkelly.com> 2015-07-20 04:17:47
Committer: Kitson Kelly <dojo@kitsonkelly.com> 2015-07-20 04:17:47

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "BSD-3-Clause",
   "dependencies": {
+    "benchmark": "bestiejs/benchmark.js#8c2b72a98945035e5c43e57da3b29185a0462cb1",
     "chai": "3.5.0",
     "charm": "0.2.0",
     "diff": "1.1.0",
@@ -17,6 +18,7 @@
     "glob": "7.0.3",
     "istanbul": "0.4.1",
     "leadfoot": "1.6.12",
+    "microtime": "1.4.2",
     "mimetype": "0.0.8",
     "source-map": "0.1.33"
   },
