--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "glob": "7.0.3",
     "istanbul": "0.4.1",
     "leadfoot": "1.6.12",
+    "lodash-amd": "3.10.0",
     "microtime": "1.4.2",
     "mimetype": "0.0.8",
+    "platform": "1.3.0",
     "source-map": "0.1.33"
   },
   "devDependencies": {
