--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   },
   "license": "BSD-3-Clause",
   "dependencies": {
+    "benchmark": "bestiejs/benchmark.js#8c2b72a98945035e5c43e57da3b29185a0462cb1",
     "chai": "3.5.0",
     "charm": "0.2.0",
     "diff": "1.1.0",
-	"digdug": "https://github.com/theintern/digdug.git#96aa488a631f608c14c1a3c337bc048bc8099bd9",
+    "digdug": "https://github.com/theintern/digdug.git#96aa488a631f608c14c1a3c337bc048bc8099bd9",
     "dojo": "2.0.0-alpha.7",
     "glob": "7.0.3",
     "istanbul": "0.4.1",
     "leadfoot": "1.6.10",
+    "lodash-amd": "3.10.0",
     "mimetype": "0.0.8",
+    "platform": "1.3.0",
     "source-map": "0.1.33"
   },
   "devDependencies": {
